tests/ui/suggestions/mismatched-types-numeric-from.stderr
error[E0308]: mismatched types
  --> $DIR/mismatched-types-numeric-from.rs:2:18
   |
LL |     let _: u32 = i32::from(0_u8);
   |            ---   ^^^^^^^^^^^^^^^ expected `u32`, found `i32`
   |            |
   |            expected due to this

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
