tests/ui/suggestions/mismatched-types-numeric-from.rs
fn main() {
    let _: u32 = i32::from(0_u8); //~ ERROR mismatched types
}
